# poke_fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
poke_api/: app.py
poke_api/config/: poke-ddl.sql
poke_api/db/: postgres.py
poke_api/usecase/: pokemon.py
